--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,18 @@
   <meta name="apple-mobile-web-app-title" content="ongi">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- Google Sign-In Client ID for Web -->
+  <meta name="google-signin-client_id" content="687252199849-7pfpauu6vb51b696e0ie1f4r5dv6818b.apps.googleusercontent.com">
+
+  <!-- Pretendard 폰트 (CDN) -->
+  <link rel="preconnect" href="https://cdn.jsdelivr.net">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
+  
+  <!-- Noto Sans KR 폰트 (Google Fonts) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
